force-app/main/default/objects/Temporal_Barcos__c/Temporal_Barcos__c.object-meta.xml
<CustomObject>
    <label>Temporal Barco</label>
    <nameField>
        <label>Temporal Barco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Barcos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>