force-app/main/default/objects/Temporal_Barcos__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Temporal Barcos</relationshipLabel>
    <relationshipName>Temporal_Barcos</relationshipName>
    <type>Lookup</type>
</CustomField>