force-app/main/default/objects/Temporal_Barcos__c/fields/FL_BARCO__c.field-meta.xml
<CustomField>
    <fullName>FL_BARCO__c</fullName>
    <label>FL_BARCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>