force-app/main/default/objects/Temporal_Barcos__c/fields/FL_BONOS__c.field-meta.xml
<CustomField>
    <fullName>FL_BONOS__c</fullName>
    <label>FL_BONOS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>