force-app/main/default/objects/Temporal_Barcos__c/fields/FL_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>FL_LUGAR__c</fullName>
    <label>FL_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>