force-app/main/default/objects/Temporal_Barcos__c/fields/FL_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>FL_NIVEL__c</fullName>
    <label>FL_NIVEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>