force-app/main/default/objects/Temporal_Barcos__c/fields/FL_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>FL_NOMBRE__c</fullName>
    <label>FL_NOMBRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>