force-app/main/default/objects/Temporal_Barcos__c/fields/FL_PRECES__c.field-meta.xml
<CustomField>
    <fullName>FL_PRECES__c</fullName>
    <label>FL_PRECES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>