force-app/main/default/objects/Temporal_Barcos__c/fields/FL_UNICO__c.field-meta.xml
<CustomField>
    <fullName>FL_UNICO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL_UNICO</label>
    <type>Checkbox</type>
</CustomField>