force-app/main/default/objects/Temporal_Barcos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>FL_LUGAR__c</columns>
    <columns>FL_BARCO__c</columns>
    <columns>FL_NOMBRE__c</columns>
    <columns>FL_TRIPU__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>